# infra

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: merge-to-main.yml  pull-request.yml
.trunk/: actions  logs  notifications  out  tools  trunk.yaml
.trunk/configs/: ruff.toml
.trunk/plugins/: trunk
components/: PulumiPlugin.yaml  __main__.py  justfile  pyproject.toml  requirements.txt
components/component/aws/ecr/: repository.py
components/components/aws/: __init__.py
components/components/aws/ecr/: README.md  __init__.py  repository.py  types.py
components/components/aws/s3/: bucket.py
components/src/components/: __init__.py  ecr_repository.py
components/src/components/aws/: __init__.py
components/src/components/aws/ecr/: README.md  repository.py
components/tests/: conftest.py
components/tests/component/aws/ecr/: test_repository.py
components/tests/components/: test_ecr_repository.py
components/tests/components/aws/ecr/: test_repository.py
components/tests/components/aws/s3/: test_bucket.py
policies/: PulumiPolicy.yaml  README.md  __main__.py  pyproject.toml
policies/policies/: name_enforcement.py
policies/policy/: name_enforcement.py
policy/: README.md  pyproject.toml
