[project]
name = "components"
version = "1.0.3"
description = "Reusable Pulumi components for Climate Policy Radar infrastructure"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pulumi",
  "pulumi-aws",
  "pytest",
  "pytest-asyncio",
  "typing-extensions>=4.12",
]
authors = [
  { name = "Climate Policy Radar", email = "tech@climatepolicyradar.org" },
]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/components"]
