[project]
name = "components"
version = "1.0.3"
description = "Reusable Pulumi components for Climate Policy Radar infrastructure"
requires-python = ">=3.12,<3.14"
dependencies = []
authors = [
  { name = "Climate Policy Radar", email = "tech@climatepolicyradar.org" },
]
readme = "README.md"

[dependency-groups]
dev = ["typing-extensions>=4.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components/components"]
