[project]
name = "components"
version = "1.0.3"
description = "Reusable Pulumi components for Climate Policy Radar infrastructure"
requires-python = ">=3.12,<3.14"
dependencies = ["boto>=2.49.0", "pulumi>=3.213.0", "pulumi-aws>=6.83.2"]
authors = [
  { name = "Climate Policy Radar", email = "tech@climatepolicyradar.org" },
]
readme = "README.md"


[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=1.3.0", "typing-extensions>=4.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components/components"]
